syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package photos;

service Photos {
  rpc UploadPhoto (stream UploadPhotoRequest) returns (UploadPhotosResponse);
  rpc GetFileNames (FileNamesRequest) returns (stream FileNamesResponse);
  rpc GetFile (GetFileRequest) returns (stream GetFileResponse);
}

//UploadPhoto
message UploadPhotoRequest {
  bytes image = 1;
  string fileName = 2;
  int32 fileSize = 3;
}

message UploadPhotosResponse {
  string message = 1;
}
//End of UploadPhoto


//GetFileNames

message FileNamesRequest{

}

message FileNamesResponse{
	string fileName = 1;
}

//End of GetFileNames


//GetFile
message GetFileRequest{
	string fileName = 1;
}

message GetFileResponse{
	bytes image = 1;
	string fileName = 2;
	int32 fileSize = 3;
	int32 currentBytePassed = 4;
}


//End of GetFile